# AGDet_Real

./: .gitignore  README.md
GDMLPlayground/: AnglesAndSuch.py  CMakeLists.txt  Rebirth2.gdml  Rebirth3.gdml  TheRebirthGDMLMain.gdml  chatgptsaveme.py  gdml.cc  vis.mac
tAm241/: 20millAm241.root  Am241.root  CMakeLists.txt  HistAm241.C  rdecay01.cc  sim.mac  singleDecay.mac  singleDecayAlpha.mac  vis.mac
tAm241_old/: rdecay01.cc  singleDecay.mac  vis.mac
tag01/: rdecay01.cc  sim.mac  vis.mac
tag02/: CMakeLists.txt  rdecay01.cc  sim.mac  vis.mac
tag03/: AllHist.C  CMakeLists.txt  pyrootAllSiHist.py  rdecay01.cc  sim.mac  vis.mac
tag04/: 18inchsphere.gdml  AHHHHH2.gdml  AHHHHH5.gdml  AHHHHH7.gdml  AHHHHH8.gdml  AllHist.C  CMakeLists.txt  GeHist.C  Recreating-worldVOL.gdml  SpacedOut.gdml  TheRebirthGDMLMain.gdml  TheRebirthGDMLTest.gdml  TheRebirthGDMLTest2.gdml  TheRebirthGDMLTestFusion.gdml  TheRebirthGDMLTestSi.gdml  TheRebirthGDMLTestSi2.gdml  TheRebirthGDMLTestSi3.gdml  TheRebirthTestFusion2.gdml  TheRebirthTestFusion3.gdml  TheRebirthTestFusion4.gdml  TheRebirthTestFusion5.gdml  rdecay01.cc  sim.mac  vis.mac
tag05/: CMakeLists.txt  GeHist.C  SiHist.C  TheRebirthGDMLMain.gdml  gpt.gdml  macroGen.py  pyrootGeHist.py  rdecay01.cc  sim.mac  vis.mac
tag06/: AllHist.C  AnglesAndSuch.py  GeHist.C  TheRebirthGDMLMain.gdml  rdecay01.cc  sim.mac  vis.mac
tag07/: AlphaCounter.C  AnglesAndSuch.py  CMakeLists.txt  CountsPlotter.py  DetHitsPos.C  Rebirth3.gdml  TheRebirthGDMLMain.gdml  macroGen.py  rdecay01.cc  sim.mac  vis.mac
tag08/: AllHist.C  BesselDecomp.py  (+13 more)
(+191 files in other folders)
